updating links and dates to correct ones

--- a/install.html
+++ b/install.html
@@ -1,13 +1,13 @@
 ---
 layout: setup
 root: .
-venue: 2015 Great Plains Network Meeting at Kansas State
+venue: Federal Reserve Board
 address: 
 country: United-States
 humandate: May 29-30, 2015
 humantime: 9:00 am - 5:00 pm
-startdate: 2015-05-29
-enddate: 2015-05-30
+startdate: 2015-06-30
+enddate: 2015-07-01
 latlng: 
 registration: open
 instructor: ["Tracy Teal"]
