updated to reflect that it's just for FRB people

--- a/index.html
+++ b/index.html
@@ -33,8 +33,19 @@ eventbrite:
     More information about this workshop is available at: <a href=https://github.com/datacarpentry/2015-06-30-FederalReserveBoard/wiki>https://github.com/datacarpentry/2015-06-30-FederalReserveBoard//wiki</a>
 </p>
 
+<p>This Data Carpentry workshop is for researchers at the Federal Reserve Board.
+No computational experience is required. This hands-on workshop teaches basic 
+concepts, skills and tools for working more effectively with data.
+
+
+
 <p>
-Data Carpentry workshops are for any researcher who has data they want to analyze, and no prior computational experience is required. This hands-on workshop teaches basic concepts, skills and tools for working more effectively with data. We will cover data organization in spreadsheets, data cleaning, SQL, the command line, and R for data analysis and visualization. Participants should bring their laptops and plan to participate actively. By the end of the workshop learners should be able to more effectively manage and analyze data and be able to apply the tools and approaches directly to their ongoing research. 
+Data Carpentry workshops are for any researcher who has data they want to analyze, and no prior computational experience is required. This hands-on workshop teaches basic concepts, skills and tools for working more effectively with data. 
+We will cover data organization in spreadsheets, data cleaning, SQL, the command 
+line, and R for data analysis and visualization. 
+By the end of the workshop 
+learners should be able to more effectively manage and analyze data and be 
+able to apply the tools and approaches directly to their ongoing research. 
 <p>
 Data Carpentry's aim is to teach researchers basic concepts, skills,
 and tools for working with data so that they can get more done in less
